--- a/index.html
+++ b/index.html
@@ -1,22 +1,8 @@
-<!--
-
-    0h h1! 
-
-    You're peeking at the source code of 0h h1. Feel free to poke around. Nothing is explicitly minified 
-    or uglified (other than the default result of me writing code). If you have any comments or questions, 
-    feel free to drop me a line at martin@q42.nl or @mrtnkl.
-
-    - Martin
-
-    (c) 2014 Q42
-    http://q42.com | @q42
-
--->
 <!doctype html>
 <html>
   <head>
     <title>0h h1</title>
-    <meta name="description" content="A little logic game by Q42." />
+    <meta name="description" content="3 Rules" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1"/>
     <meta name="format-detection" content="telephone=no">
 
