--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
                 </div>
                 <p>
-                    a little logic game<br>by Q42
+                    3 Rules
                 </p>
             </div>
         </div>
@@ -84,36 +84,23 @@
             <div class="vertical">
             <h3>About</h3>
             <div class="side-padded">
-                <p>
-                0h h1 is a little logic game<br>
-                by Q42. <span id="app">If you like, you can also get the free 0h h1 app.</span><br>
-                <br>
-                It was created by<br>
-                Martin Kool.<br>
-                <br>
-                The concept is also known<br>
-                as Takuzu or Binairo.<br>
-                <br>
-                (c) 2014<br>
-                www.q42.com &middot; 0hh1.com
-                </p>
                 </div>
             </div>
         </div>
 
         <div id="rules" class="screen text" data-action="show-game">
             <div class="vertical">
-            <h3>Rules</h3>
+            <h3>RULES:</h3>
                 <div class="side-padded">
                 <p>
-                    Three adjacent tiles of the same color
-                    in a row or column isn't allowed.
+                    Three adjacent tiles of the same colour
+                    in a row or column aren't allowed.
                 </p>
                 <p>
-                    Rows and columns have an equal number of each color.
+                    Rows and columns must have an equal number of each colour.
                 </p>
                 <p>
-                    No two rows and no two columns are the same.
+                    No two rows or columns are the same.
                 </p>
                 </div>
             </div>
